tests/miz/fail/parser/fail_parser_simple_statements_recovery_001.miz
let x be;
assume that;
take;
set =;
set f x;
take x assume thesis;
let y be set by A assume contradiction;
